[package]
name = "ykprovision"
version = "0.1.0"
authors = ["Cole Mickens <cole.mickens@gmail.com>"]
edition = "2018"

[dependencies]
atoi = { name = "atoi", version = "0.3.2" }
rpassword = { name = "rpassword", version = "4.0.5" }
rand = "0.7.3"
regex = { name = "regex", version = "1.3.9" }
openssl = "0.10.30"

[dependencies.yubikey-piv]
git = "https://github.com/iqlusioninc/yubikey-piv.rs"
rev = "4435a544351678fdb1baaa84286aa685d32d13d5"
features = ["untested"]
